--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -73,3 +73,15 @@ table.foot {
 .footer {
     background: #eee;
 }
+
+/*
+ * Search
+ */
+.search-result {
+    em {
+        background: #FFF176;
+        font-weight: bold;
+        font-style: normal;
+        padding: 2px;
+    }
+}
