--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -77,11 +77,10 @@ table.foot {
 /*
  * Search
  */
-.search-result {
+.ais-highlight {
     em {
+        color: #212529;
         background: #FFF176;
-        font-weight: bold;
         font-style: normal;
-        padding: 2px;
     }
 }
