Add view in terminal text

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9245,6 +9245,14 @@ a.text-dark:focus {
   }
 }
 
+.unselectable {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  /* Likely future */
+}
+
 /*
  *
  * Manual styles
