--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7469,7 +7469,6 @@ button.bg-dark:focus {
 }
 
 .mb-3,
-#table_of_contents,
 .my-3 {
   margin-bottom: 1rem !important;
 }
@@ -9259,33 +9258,6 @@ a.text-dark:focus {
  *
  */
 
-table.head {
-  width: 100%;
-  font-weight: bold;
-  font-size: 1.25rem;
-  padding-bottom: 0.5rem;
-  border-bottom: 1px solid #ccc;
-}
-
-table.head .head-vol {
-  text-align: center;
-}
-
-table.head .head-rtitle {
-  text-align: right;
-}
-
-table.foot {
-  width: 100%;
-  margin-top: 2rem;
-  padding-top: 0.5rem;
-  border-top: 1px solid #ccc;
-}
-
-table.foot .foot-date::before {
-  content: 'Last updated: ';
-}
-
 .man-page {
   /* Table styles */
   /* Equivalent to a line break */
@@ -9321,9 +9293,8 @@ table.foot .foot-date::before {
 #table_of_contents {
   background: #eee;
   border: 1px solid #ccc;
-  display: inline-block;
   padding: 1rem;
-  float: right;
+  width: 100%;
 }
 
 #table_of_contents h5 {
@@ -9334,18 +9305,11 @@ table.foot .foot-date::before {
   padding: 0 2rem;
 }
 
-@media (max-width: 991.98px) {
-  #table_of_contents {
-    width: 100%;
-    display: block;
-  }
-}
-
-@media (min-width: 992px) {
-  #table_of_contents {
-    margin-left: 2rem;
-    margin-bottom: 2rem;
-    max-width: 50%;
+@media (max-width: 1199.98px) {
+  .main-row .col-lg-3 {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
   }
 }
 
