--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -48,17 +48,12 @@
 }
 
 #table_of_contents {
-    background: #eee;
-    border: 1px solid #ccc;
-    padding: 1rem;
-    width: 100%;
-
     h5 {
         font-weight: bold;
     }
-    ol {
-        padding: 0 2rem;
-    }
+}
+#view_in_terminal {
+    background: #fff;
 }
 @include media-breakpoint-down(lg) {
     .main.row aside {
