--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,2 +1,12 @@
 $enable-gradients: true;
 $enable-shadows: true;
+$theme-colors: (
+  "primary":    #1993e2,
+  // "secondary":  red,
+  // "success":    red,
+  // "info":       red,
+  // "warning":    red,
+  // "danger":     red,
+  // "light":      red,
+  // "dark":       red
+);
